--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "8000",
   "version": "1.0.0",
-  "description": "",
+  "description": "use `Node.js` to create a server playground.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
