--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "type": "git",
     "url": "git+https://github.com/server-playground/8000.git"
   },
-  "author": "",
+  "author": {
+    "name": "lixinliang",
+    "url": "https://github.com/lixinliang"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/server-playground/8000/issues"
